@startuml

title __VIEWS's Class Diagram__\n

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class CharacterSummary {
          - nameText : TextView
          - pilot : TextView
          - fighter : TextView
          - trader : TextView
          - engineer : TextView
          - difficulty : TextView
          - credits : TextView
          - spaceShip : TextView
          - remaining : TextView
          - continuebtn : Button
          # onCreate()
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class MainActivity {
          - difficultySpinner : Spinner
          # onCreate()
          - createPlayer()
          - parseInt()
          - createUniverse()
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class MarketBuyRecyclerViewAdapter {
          {static} - TAG : String
          - itemNames : ArrayList<String>
          - itemPrices : ArrayList<String>
          - itemContext : Context
          + MarketBuyRecyclerViewAdapter()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class ViewHolder {
          ~ itemName : TextView
          ~ itemPrice : TextView
          ~ quantityEdit : EditText
          ~ buyLayout : RelativeLayout
          ~ buyButton : Button
          + ViewHolder()
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class MarketMain {
          - itemNames : ArrayList<String>
          - itemPrices : ArrayList<String>
          - cargoNames : ArrayList<String>
          - cargoPrices : ArrayList<String>
          # onCreate()
          - initShopItems()
          - initCargoItems()
          - initRecyclerView()
          - initRecyclerView1()
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class MarketSellRecyclerViewAdapter {
          {static} - TAG : String
          - itemNames : ArrayList<String>
          - itemPrices : ArrayList<String>
          - itemContext : Context
          + MarketSellRecyclerViewAdapter()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class ViewHolder {
          ~ itemName : TextView
          ~ itemPrice : TextView
          ~ quantityEdit : EditText
          ~ sellLayout : RelativeLayout
          ~ sellButton : Button
          + ViewHolder()
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.views {
      class OnPlanet {
          - visitMarketBtn : Button
          # onCreate()
      }
    }
  }
  

  CharacterSummary -up-|> AppCompatActivity
  CharacterSummary o-- Player : player
  HostCallbacks -up-|> FragmentHostCallback
  MainActivity -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  MarketBuyRecyclerViewAdapter -up-|> Adapter
  MarketBuyRecyclerViewAdapter +-down- ViewHolder
  ViewHolder -up-|> ViewHolder
  MarketMain -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback
  MarketSellRecyclerViewAdapter -up-|> Adapter
  MarketSellRecyclerViewAdapter +-down- ViewHolder
  ViewHolder -up-|> ViewHolder
  OnPlanet -up-|> AppCompatActivity
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
